# flappy-bird-gymnasium

./: .gitignore  .pylintrc  pyproject.toml
flappy_bird_gymnasium/: cli.py
flappy_bird_gymnasium/envs/: flappy_bird_env.py
flappy_bird_gymnasium/tests/: test_dqn.py  test_human.py  test_perfect.py  test_random.py
