[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flappy-bird-gymnasium"
version = "0.1.0"
description = "A Flappy Bird environment using Gymnasium"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.0.0",
    "matplotlib>=3.9.3",
    "numpy>=2.2.0",
    "pygame>=2.6.1",
    "pytest>=8.3.4",
]

[tool.hatch.build.targets.wheel]
packages = ["flappy_bird_gymnasium"]

[tool.pyright]
